Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     background: #fff;
     margin: 0;
     padding: 0;
-    font-family: "Source Sans Pro";
+    font-family: "Source Sans Pro", sans-serif;
     color: #2f4956
 }
 
@@ -31,7 +31,7 @@ body {
 }
 
 .requestTalk {
-    margin: 6.5em auto .8em;
+    margin: 2.5em auto .8em;
     padding: 0 2em;
     font-weight: 300;
     font-size: 1.3em;
